# mandelbrot-bench

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MandelbrotWidget.cpp  MandelbrotWidget.h  README.md  main.cpp
